samples/_failures_safe/1761075920_ff4e1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_348431e7.c: In function ‘main’:
./samples/SAFE/__tmp_348431e7.c:146:17: error: expected declaration or statement at end of input
  146 |                 return 1;
      |                 ^~~~~~
./samples/SAFE/__tmp_348431e7.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_348431e7.c:146:17: error: expected declaration or statement at end of input
